--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         <activity
             android:name=".MainActivity3"
             android:exported="false"
-            android:label="Food Table"
+            android:label="Edit Timetable"
             android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".MainActivity2"
